wallpapers/image: don't add files/folders to KDirWatch again in proxy model

which leads to unnecessary duplicate watched items because KDirWatch
already monitors those files/folders by monitoring their parent folder
in customPaths.

BUG: 473798
FIXED-IN: 5.27.8